--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="rackhd" class="anchor" href="#rackhd" aria-hidden="true"><span class="octicon octicon-link"></span></a>RackHD</h1>
+<a id="rackhd" class="anchor" href="#rackhd" aria-hidden="true"><span class="octicon octicon-link"></span></a>RackHD™</h1>
 
-<p>RackHD is a technology stack up created for enabling hardware management and operations, to provide cohesive APIs to enabled automated infrastructure. In a Converged Infrastructure Platform (CIP) architecture, RackHD software provides hardware management and orchestration
+<p>RackHD (Rack Hardware Director) is a technology stack up created for enabling hardware management and orchestration, to provide cohesive APIs to enabled automated infrastructure. In a Converged Infrastructure Platform (CIP) architecture, RackHD software provides hardware management and orchestration
 (M&amp;O). It serves as an abstraction layer between other M&amp;O layers and the underlying physical hardware. Developers can use the RackHD API to create a user interface that serves as single point of access for managing hardware services regardless of the specific hardware in place.</p>
 
 <p>This repository acts as a single source location to help you get or build all the pieces to learn about, take advantage of, and contribute to RackHD.</p>
@@ -43,6 +43,13 @@
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
 <p>The RackHD project is a collection of libraries and applications housed at <a href="https://github.com/RackHD/">https://github.com/RackHD/</a>. The code for RackHD is a combination of Python, Javascript (NodeJS), and C, available under the Apache 2.0 license (or compatible sublicences for library dependencies).</p>
+
+<p>We maintain a mailing list at <a href="https://groups.google.com/d/forum/rackhd">https://groups.google.com/d/forum/rackhd</a>. You can visit the group
+through the web page, or subscribe directly from email by sending email to <a href="mailto:rackhd+subscribe@googlegroups.com">rackhd+subscribe@googlegroups.com</a></p>
+
+<p>We also have a #RackHD slack channel under <a href="https://codecommunity.slack.com">https://codecommunity.slack.com</a> - <a href="https://codecommunity.slack.com/messages/rackhd/">https://codecommunity.slack.com/messages/rackhd/</a>. You can get an invite by requesting one at <a href="http://community.emccode.com">http://community.emccode.com</a>. The subchannel is #rackhd.</p>
+
+<p>Code and Bug submissions at handled on github at the relevant repository for the code, with more detail in our documentation at <a href="http://rackhd.readthedocs.org/en/latest/contributing.html">http://rackhd.readthedocs.org/en/latest/contributing.html</a></p>
 
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
