Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="RackHD : RackHD for EMC&#39;s Hyper-converged infrastructure efforts">
+    <meta name="description" content="RackHD™ : RackHD™ (Rack Hardware Director) provides hardware management and orchestration services">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>RackHD</title>
+    <title>RackHD™</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/emccode/RackHD">View on GitHub</a>
 
-          <h1 id="project_title">RackHD</h1>
-          <h2 id="project_tagline">RackHD for EMC&#39;s Hyper-converged infrastructure efforts</h2>
+          <h1 id="project_title">RackHD™</h1>
+          <h2 id="project_tagline">RackHD™ (Rack Hardware Director) provides hardware management and orchestration services</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/emccode/RackHD/zipball/master">Download this project as a .zip file</a>
@@ -42,7 +42,7 @@
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
-<p>The RackHD project is a collection of libraries and applications housed at <a href="https://github.com/RackHD/">https://github.com/RackHD/</a>. The code for RackHD is a combination of Python, Javascript (NodeJS), and C, available under the Apache 2.0 license (or compatible sublicences for library dependencies).</p>
+<p>The RackHD project is a collection of libraries and applications housed at <a href="https://github.com/RackHD/">https://github.com/RackHD/</a>. The code for RackHD is a combination of Javascript (Node.js), and C, available under the Apache 2.0 license (or compatible sublicences for library dependencies).</p>
 
 <p>We maintain a mailing list at <a href="https://groups.google.com/d/forum/rackhd">https://groups.google.com/d/forum/rackhd</a>. You can visit the group
 through the web page, or subscribe directly from email by sending email to <a href="mailto:rackhd+subscribe@googlegroups.com">rackhd+subscribe@googlegroups.com</a></p>
@@ -73,7 +73,7 @@ through the web page, or subscribe directly from email by sending email to <a hr
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">RackHD maintained by <a href="https://github.com/emccode">emccode</a></p>
+        <p class="copyright">RackHD™ maintained by <a href="https://github.com/emccode">emccode</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
