Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="RackHD™ : RackHD™ (Rack Hardware Director) provides hardware management and orchestration services">
+    <meta name="description" content="RackHD™ : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/emccode/RackHD">View on GitHub</a>
 
           <h1 id="project_title">RackHD™</h1>
-          <h2 id="project_tagline">RackHD™ (Rack Hardware Director) provides hardware management and orchestration services</h2>
+          <h2 id="project_tagline"></h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/emccode/RackHD/zipball/master">Download this project as a .zip file</a>
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="rackhd" class="anchor" href="#rackhd" aria-hidden="true"><span class="octicon octicon-link"></span></a>RackHD™</h1>
+<a id="rackhd" class="anchor" href="#rackhd" aria-hidden="true"><span class="octicon octicon-link"></span></a>RackHD</h1>
 
 <p>RackHD (Rack Hardware Director) is a technology stack up created for enabling hardware management and orchestration, to provide cohesive APIs to enabled automated infrastructure. In a Converged Infrastructure Platform (CIP) architecture, RackHD software provides hardware management and orchestration
 (M&amp;O). It serves as an abstraction layer between other M&amp;O layers and the underlying physical hardware. Developers can use the RackHD API to create a user interface that serves as single point of access for managing hardware services regardless of the specific hardware in place.</p>
