Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <h1>
 <a id="rackhd" class="anchor" href="#rackhd" aria-hidden="true"><span class="octicon octicon-link"></span></a>RackHD™</h1>
 
+<blockquote>
+<p>RackHD is a new program and is currently in active development by EMC.  If you have any further questions or would like to contact EMC about the RackHD program – please contact us at: <a href="mailto:rackhd@googlegroups.com">rackhd@googlegroups.com</a></p>
+</blockquote>
+
 <p>RackHD (Rack Hardware Director) is a technology stack up created for enabling hardware management and orchestration, to provide cohesive APIs to enabled automated infrastructure. In a Converged Infrastructure Platform (CIP) architecture, RackHD software provides hardware management and orchestration
 (M&amp;O). It serves as an abstraction layer between other M&amp;O layers and the underlying physical hardware. Developers can use the RackHD API to create a user interface that serves as single point of access for managing hardware services regardless of the specific hardware in place.</p>
 
