Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ through the web page, or subscribe directly from email by sending email to <a hr
 
 <p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</p>
 
+<p>RackHD is a Trademark of EMC Corporation</p>
+
 <h2>
 <a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h2>
 
