--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <p>The RackHD project is a collection of libraries and applications housed at <a href="https://github.com/RackHD/">https://github.com/RackHD/</a>. The code for RackHD is a combination of Javascript (Node.js), and C, available under the Apache 2.0 license (or compatible sublicences for library dependencies).</p>
 
-<p>Code and Bug submissions at handled on github at the relevant repository for the code, with more detail in our documentation at <a href="http://rackhd.readthedocs.org/en/latest/contributing.html">http://rackhd.readthedocs.org/en/latest/contributing.html</a></p>
+<p>Code and bug submissions are handled on GitHub at the relevant repository for the code, with more detail in our documentation at <a href="http://rackhd.readthedocs.org/en/latest/contributing.html">http://rackhd.readthedocs.org/en/latest/contributing.html</a></p>
 
 <h2>
 <a id="community" class="anchor" href="#community" aria-hidden="true"><span class="octicon octicon-link"></span></a>Community</h2>
@@ -75,7 +75,7 @@ through the web page, or subscribe directly from email by sending email to <a hr
 <h2>
 <a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h2>
 
-<p>Please file bugs and issues at the Github issues page. The code and documentation are released with no warranties or SLAs and are intended to be supported through a community driven process.</p>
+<p>Please file bugs and issues at the GitHub issues page. The code and documentation are released with no warranties or SLAs and are intended to be supported through a community driven process.</p>
       </section>
     </div>
 
