Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <p>We maintain a mailing list at <a href="https://groups.google.com/d/forum/rackhd">https://groups.google.com/d/forum/rackhd</a>. You can visit the group
 through the web page, or subscribe directly from email by sending email to <a href="mailto:rackhd+subscribe@googlegroups.com">rackhd+subscribe@googlegroups.com</a></p>
 
-<p>We also have a #RackHD slack channel under <a href="https://codecommunity.slack.com">https://codecommunity.slack.com</a> - <a href="https://codecommunity.slack.com/messages/rackhd/">https://codecommunity.slack.com/messages/rackhd/</a>. You can get an invite by requesting one at <a href="http://community.emccode.com">http://community.emccode.com</a>. The subchannel is #rackhd.</p>
+<p>We also have a #RackHD slack channel: You can get an invite by requesting one at <a href="http://community.emccode.com">http://community.emccode.com</a>.</p>
 
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
@@ -87,7 +87,17 @@ through the web page, or subscribe directly from email by sending email to <a hr
       </footer>
     </div>
 
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-69712167-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
 
   </body>
 </html>
