--- a/example/rackhd/monorail/static/http/index.html
+++ b/example/rackhd/monorail/static/http/index.html
@@ -2,19 +2,22 @@
 <!-- #Copyright © 2017 Dell Inc. or its subsidiaries.  All Rights Reserved.-->
 <html>
   <head>
-    <title>RackHD/ELK on Docker</title>
+    <title>RackHD on Docker</title>
+    <script>
+        var url = window.location.href.split(':')[1];
+
+        window.onload = function() {
+            document.getElementById("here").innerHTML = "Paragraph changed!";
+            document.getElementById("here").innerHTML
+                = "<li><a href=http://"+url+":9090/api/2.0/config>RackHD Config</a></li>"
+                + "<li><a href=http://"+url+":9090/swagger-ui>RackHD API 2.0 Docs</a></li>"
+                + "<li><a href=http://"+url+":15672>RabbitMQ Management</a> (guest/guest)</li>"
+        }
+    </script>
   </head>
   <body>
-    <h1>RackHD/ELK on Docker</h1>
+    <h1>RackHD on Docker</h1>
     <h2>Index</h2>
-    <ul>
-      <li><a href="http://localhost:9090/api/1.1/config">RackHD Config</a></li>
-      <li><a href="http://localhost:9090/docs">RackHD API 1.1 Docs</a></li>
-      <li><a href="http://localhost:9090/swagger-ui">RackHD API 2.0 Docs</a></li>
-      <li><a href="http://localhost:9090/ui">RackHD Web UI</a></li>
-      <li><a href="http://localhost:9200">Elasticsearch</a></li>
-      <li><a href="http://localhost:5601">Kibana</a></li>
-      <li><a href="http://localhost:15672">RabbitMQ Management</a> (guest/guest)</li>
-    </ul>
+    <ul id="here"></ul>
   </body>
 </html>
